--- a/css/style.css
+++ b/css/style.css
@@ -33,16 +33,22 @@ body div {
     align-items: center;
     margin: 25px;
 }
-div p {
+
+body div img{
+    margin: 12.5px;
+}
+p {
+    display:inline-block;
     width: 480px;
     height: 400px;
 }
-div img{
-    width: 300px;
-    margin: 25px;
-}
 
-body:nth-child(4){
-    margin: 25px;
+.foot{
+    background-color: gray;
+    margin: 0px;
+    margin-top: 30px;
+    position: fixed;                        
+    height: 50px;
+    width: 100%;
 
 }
